checkout/cybersourcePayments/cybersourcePayments/objects/Payment_Api_Variables__c/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>Api Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>