checkout/cybersourcePayments/cybersourcePayments/objects/Payment_Api_Variables__c/fields/Api_Shared_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Shared_Secret_Key__c</fullName>
    <label>Api Shared Secret Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>