checkout/cybersourcePayments/cybersourcePayments/objects/Payment_Api_Variables__c/fields/Api_Url__c.field-meta.xml
<CustomField>
    <fullName>Api_Url__c</fullName>
    <label>Api Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>